sumo/tests/traci/VariableRetrieval/Edge/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 170 255 dummy
simstep 6 1
